# stock_portfolio_analysis

./: .env  main.py  pyproject.toml  try.py
src/: agent.py  prompts.py  tools.py  utils.py
